plugins {
    id 'org.springframework.boot' version '2.6.11'
    id 'io.spring.dependency-management' version '1.0.13.RELEASE'
    id 'java'
    id 'war'
}

group = 'com.delgo.reward'
version = '1.0.12'
sourceCompatibility = '17'
apply plugin:'war'

repositories {
    mavenCentral()
}

bootJar {
    mainClass = 'com.delgo.reward'
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.session:spring-session-core'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'junit:junit:4.13.2'
    implementation 'org.projectlombok:lombok:1.18.24'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'

    implementation 'org.springframework.boot:spring-boot-starter-quartz'

    // Apple Login
    implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '3.10'
    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
    implementation group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.50'

    // jwt
    implementation group: 'com.auth0', name: 'java-jwt', version: '3.19.0'
    // NCP Object Storage Control SDK
    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.300'
    // Crawling
    implementation 'org.jsoup:jsoup:1.15.3'
    implementation 'org.seleniumhq.selenium:selenium-java:4.4.0'

    implementation 'com.google.code.gson:gson:2.9.0'
    implementation group: 'org.json', name: 'json', version: '20220320'

    implementation 'com.google.firebase:firebase-admin:6.8.1'
    implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.2.2'

    // jpg -> webp
    implementation "com.sksamuel.scrimage:scrimage-core:4.0.32"
    implementation "com.sksamuel.scrimage:scrimage-webp:4.0.32"

    // kafka chat
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.kafka:spring-kafka'
    testImplementation 'org.springframework.kafka:spring-kafka-test'

    // Mongo DB
    implementation "org.springframework.boot:spring-boot-starter-data-mongodb"

    // AOP
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    // JSON
    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'

    // Excel parsing
    implementation 'org.apache.poi:poi:5.1.0'
    implementation 'org.apache.poi:poi-ooxml:5.1.0'

//    // Swagger
//    implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
//    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'

}

tasks.named('test') {
    useJUnitPlatform()
}